force-app/main/default/objects/DailyReport__c/DailyReport__c.object-meta.xml
<CustomObject>
    <label>日報</label>
    <nameField>
        <displayFormat>日報No{0000}</displayFormat>
        <label>日報No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>