force-app/main/default/objects/DailyReport__c/fields/AcquisitionDays__c.field-meta.xml
<CustomField>
    <fullName>AcquisitionDays__c</fullName>
    <label>有休取得日数</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.5</fullName>
            </value>
            <value>
                <fullName>1.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>