force-app/main/default/objects/DailyReport__c/fields/ActualTime__c.field-meta.xml
<CustomField>
    <fullName>ActualTime__c</fullName>
    <formula>IF( ISPICKVAL(DailyReportType__c, &quot;出勤&quot;),
(( WorkTime__c / 15 ) /4),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>日報種別が「出勤」なら労働時間（分）から算出
日報種別が「出勤」以外は0</inlineHelpText>
    <label>実労働時間</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>