force-app/main/default/objects/DailyReport__c/fields/AttendanceComment__c.field-meta.xml
<CustomField>
    <fullName>AttendanceComment__c</fullName>
    <label>出勤コメント</label>
    <type>TextArea</type>
</CustomField>