force-app/main/default/objects/DailyReport__c/fields/BreakTime__c.field-meta.xml
<CustomField>
    <fullName>BreakTime__c</fullName>
    <label>休憩時間（分）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>