force-app/main/default/objects/DailyReport__c/fields/BreakTimeHour__c.field-meta.xml
<CustomField>
    <fullName>BreakTimeHour__c</fullName>
    <formula>( BreakTime__c / 15 ) / 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>休憩時間</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>