force-app/main/default/objects/DailyReport__c/fields/BreakTimeSelection__c.field-meta.xml
<CustomField>
    <fullName>BreakTimeSelection__c</fullName>
    <label>休憩時間（入力）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>0.5</fullName>
            </value>
            <value>
                <fullName>1.0</fullName>
                <default>true</default>
                <label>1.0</label>
            </value>
            <value>
                <fullName>1.5</fullName>
            </value>
            <value>
                <fullName>2.0</fullName>
            </value>
            <value>
                <fullName>2.5</fullName>
            </value>
            <value>
                <fullName>3.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>