force-app/main/default/objects/DailyReport__c/fields/DailyReportIdentificationId__c.field-meta.xml
<CustomField>
    <fullName>DailyReportIdentificationId__c</fullName>
    <formula>TEXT(Date__c) + CASESAFEID(MasterMemberId__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[システム]日報識別ID</label>
    <type>Text</type>
</CustomField>