force-app/main/default/objects/DailyReport__c/fields/DailyReportType__c.field-meta.xml
<CustomField>
    <fullName>DailyReportType__c</fullName>
    <label>日報種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>出勤</fullName>
            </value>
            <value>
                <fullName>休日</fullName>
            </value>
            <value>
                <fullName>有休</fullName>
            </value>
            <value>
                <fullName>代休</fullName>
            </value>
            <value>
                <fullName>欠勤</fullName>
            </value>
            <value>
                <fullName>特休</fullName>
            </value>
            <value>
                <fullName>休日出勤</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>