force-app/main/default/objects/DailyReport__c/fields/DisplayTimeStampAttendanceTime__c.field-meta.xml
<CustomField>
    <fullName>DisplayTimeStampAttendanceTime__c</fullName>
    <formula>IF( ISBLANK(TimeStampAttendanceTime__c),
&quot;&quot;,
MID( TEXT( TimeStampAttendanceTime__c + 0.375 ),0, 10 )
+
&quot;　&quot;
+
MID( TEXT( TimeStampAttendanceTime__c + 0.375 ), 12, 8)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[表示用]出勤タイムスタンプ</label>
    <type>Text</type>
</CustomField>