force-app/main/default/objects/DailyReport__c/fields/DisplayTimeStampLeavingTime__c.field-meta.xml
<CustomField>
    <fullName>DisplayTimeStampLeavingTime__c</fullName>
    <formula>IF( ISBLANK(TimeStampLeavingTime__c),
&quot;&quot;,
MID( TEXT( TimeStampLeavingTime__c + 0.375 ),0, 10 )
+
&quot;　&quot;
+
MID( TEXT( TimeStampLeavingTime__c + 0.375 ), 12, 8)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[表示用]退勤タイムスタンプ</label>
    <type>Text</type>
</CustomField>