force-app/main/default/objects/DailyReport__c/fields/GoOutTimeHour__c.field-meta.xml
<CustomField>
    <fullName>GoOutTimeHour__c</fullName>
    <formula>( TSGoOutTime__c / 15 ) /4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>外出時間</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>