force-app/main/default/objects/DailyReport__c/fields/HolidayWorkTime__c.field-meta.xml
<CustomField>
    <fullName>HolidayWorkTime__c</fullName>
    <formula>IF( ISPICKVAL(DailyReportType__c, &quot;休日出勤&quot;),
(( WorkTime__c / 15 ) /4),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>休日出勤時間</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>