force-app/main/default/objects/DailyReport__c/fields/LeavingComment__c.field-meta.xml
<CustomField>
    <fullName>LeavingComment__c</fullName>
    <label>退勤コメント</label>
    <type>TextArea</type>
</CustomField>