force-app/main/default/objects/DailyReport__c/fields/LeavingTime__c.field-meta.xml
<CustomField>
    <fullName>LeavingTime__c</fullName>
    <label>退勤時間</label>
    <type>DateTime</type>
</CustomField>