force-app/main/default/objects/DailyReport__c/fields/MasterMemberId__c.field-meta.xml
<CustomField>
    <fullName>MasterMemberId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連メンバー</label>
    <referenceTo>MasterMember__c</referenceTo>
    <relationshipLabel>日報</relationshipLabel>
    <relationshipName>DailyReports</relationshipName>
    <type>Lookup</type>
</CustomField>