force-app/main/default/objects/DailyReport__c/fields/MidnightTime__c.field-meta.xml
<CustomField>
    <fullName>MidnightTime__c</fullName>
    <label>深夜時間（分）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>