force-app/main/default/objects/DailyReport__c/fields/MidnightTimeHour__c.field-meta.xml
<CustomField>
    <fullName>MidnightTimeHour__c</fullName>
    <formula>IF( OR( ISPICKVAL(DailyReportType__c, &quot;出勤&quot;) , ISPICKVAL(DailyReportType__c, &quot;休日出勤&quot;) ),
(( MidnightTime__c / 15 ) /4),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>深夜時間</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>