force-app/main/default/objects/DailyReport__c/fields/MonthlyReportId__c.field-meta.xml
<CustomField>
    <fullName>MonthlyReportId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連勤怠</label>
    <referenceTo>MonthlyReport__c</referenceTo>
    <relationshipLabel>日報</relationshipLabel>
    <relationshipName>DailyReports</relationshipName>
    <type>Lookup</type>
</CustomField>