force-app/main/default/objects/DailyReport__c/fields/MonthlyReportLock__c.field-meta.xml
<CustomField>
    <fullName>MonthlyReportLock__c</fullName>
    <formula>MonthlyReportId__r.DataLock__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>関連勤怠：データロック</label>
    <type>Checkbox</type>
</CustomField>