force-app/main/default/objects/DailyReport__c/fields/OverTime__c.field-meta.xml
<CustomField>
    <fullName>OverTime__c</fullName>
    <label>時間外（分）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>