force-app/main/default/objects/DailyReport__c/fields/OverTimeHour__c.field-meta.xml
<CustomField>
    <fullName>OverTimeHour__c</fullName>
    <formula>IF( ISPICKVAL(DailyReportType__c, &quot;出勤&quot;),
(( OverTime__c / 30 ) /2),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>日報種別が「出勤」以外なら0
それ以外は実労働時間が日報_勤務時間を超えた時間を算出</inlineHelpText>
    <label>時間外</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>