force-app/main/default/objects/DailyReport__c/fields/PaidTime__c.field-meta.xml
<CustomField>
    <fullName>PaidTime__c</fullName>
    <label>有休時間（分）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>