force-app/main/default/objects/DailyReport__c/fields/PaidTimeHour__c.field-meta.xml
<CustomField>
    <fullName>PaidTimeHour__c</fullName>
    <formula>( PaidTime__c / 30 ) /2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>有休時間</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>