force-app/main/default/objects/DailyReport__c/fields/ScheduledAttendanceTime__c.field-meta.xml
<CustomField>
    <fullName>ScheduledAttendanceTime__c</fullName>
    <label>予定出勤時間</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TimeList30</valueSetName>
    </valueSet>
</CustomField>