force-app/main/default/objects/DailyReport__c/fields/ScheduledLeavingTime__c.field-meta.xml
<CustomField>
    <fullName>ScheduledLeavingTime__c</fullName>
    <label>予定退勤時間</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TimeList30Next</valueSetName>
    </valueSet>
</CustomField>