force-app/main/default/objects/DailyReport__c/fields/TimeStampAttendanceTime__c.field-meta.xml
<CustomField>
    <fullName>TimeStampAttendanceTime__c</fullName>
    <label>出勤時間：タイムスタンプ</label>
    <type>DateTime</type>
</CustomField>