force-app/main/default/objects/DailyReport__c/fields/TimeStampLeavingTime__c.field-meta.xml
<CustomField>
    <fullName>TimeStampLeavingTime__c</fullName>
    <label>退勤時間：タイムスタンプ</label>
    <type>DateTime</type>
</CustomField>