force-app/main/default/objects/DailyReport__c/fields/TSBreakTime__c.field-meta.xml
<CustomField>
    <fullName>TSBreakTime__c</fullName>
    <label>打刻休憩時間（分）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>