force-app/main/default/objects/DailyReport__c/fields/TSGoOutTime__c.field-meta.xml
<CustomField>
    <fullName>TSGoOutTime__c</fullName>
    <label>打刻外出時間（分）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>