force-app/main/default/objects/DailyReport__c/fields/TSMoveTime__c.field-meta.xml
<CustomField>
    <fullName>TSMoveTime__c</fullName>
    <label>打刻移動時間（分）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>