force-app/main/default/objects/DailyReport__c/fields/TSWorkTime__c.field-meta.xml
<CustomField>
    <fullName>TSWorkTime__c</fullName>
    <label>打刻作業時間（分）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>