force-app/main/default/objects/DailyReport__c/fields/WorkTimeHour__c.field-meta.xml
<CustomField>
    <fullName>WorkTimeHour__c</fullName>
    <formula>IF( ISPICKVAL(DailyReportType__c, &quot;出勤&quot;),
ActualTime__c + PaidTimeHour__c ,
IF( ISPICKVAL(DailyReportType__c, &quot;有休&quot;),
PaidTimeHour__c,
0
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>日報種別が「出勤」なら実労働＋有休時間
日報種別が「有休」なら有休時間
それ以外は0</inlineHelpText>
    <label>総労働時間</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>